clusters/prod-cluster/organizations/numinia/house-of-riddles/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperfy2-numinia-house-of-riddles-deployment
  namespace: numinia
  labels:
    environment: pro
    app: house-of-riddles
    pod-type: hyperfy2-numinia-house-of-riddles
  annotations:
    keda.sh/auto-scaling: "enabled"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: house-of-riddles
      environment: pro
      pod-type: hyperfy2-numinia-house-of-riddles
  template:
    metadata:
      labels:
        app: house-of-riddles
        environment: pro
        pod-type: hyperfy2-numinia-house-of-riddles
    spec:
      serviceAccountName: aws-secret-manager-sa
      volumes:
        - name: hyperfy2-persistent-storage
          persistentVolumeClaim:
            claimName: numinia-shared-pvc
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: hyperfy2-numinia-house-of-riddles-aws-secrets
      containers:
        - name: hyperfy2-numinia-house-of-riddles
          image: ghcr.io/numengames/numinia-hyperfy2:sha-119b8a4d1e3238aa4de6eada97100d48833f1e78
          volumeMounts:
            - name: hyperfy2-persistent-storage
              mountPath: /mnt/hyperfy2-persistent-storage
              subPath: house-of-riddles
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
          resources:
            requests:
              memory: ${MEMORY}
              cpu: ${CPU}
            limits:
              memory: ${LIMITS_MEMORY}
              cpu: ${LIMITS_CPU}
